Revert "Fix centering of logo on IE"
This reverts commit 65ad4d875f9f1494894105c99e4c61288b693f77.

--- a/style.css
+++ b/style.css
@@ -33,15 +33,16 @@ a {
 }
 
 #logo {
-  text-align: center;
-  width: 940px;
-  position: absolute;
-  z-index: 20;
+  text-align:center;
+  width:545px;
+  float:left;
 }
 
 #logo img {
   width: 200px;
-  margin: 0 auto;
+  position: absolute;
+  margin-left: 100px;
+  z-index:20;
 }
 
 #header .right .social {
